--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.1",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.3",
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "sass": "^1.41.1",
