--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
+    "mailgun.js": "^3.7.2",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
