--- a/package.json
+++ b/package.json
@@ -15,20 +15,28 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.21.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/mysql": "^2.15.19",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mailgun.js": "^3.7.2",
     "mysql": "^2.18.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
