--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mysql": "^2.15.19",
     "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
@@ -28,6 +29,7 @@
     "@types/react-router-dom": "^5.3.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -36,6 +38,7 @@
     "mailgun.js": "^3.7.2",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -53,6 +56,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5"
   }
