final cleanup before submission

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "materialTheme.accent": "Tomato"
+    "materialTheme.accent": "Tomato",
+    "cSpell.ignoreWords": [
+        "userid"
+    ]
 }
