--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-router-dom": "^5.3.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
