--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.21.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/mysql": "^2.15.19",
+    "@types/morgan": "^1.9.3",
+    "@types/mysql": "^2.15.21",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "compression": "^1.7.4",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "css-loader": "^6.3.0",
@@ -38,6 +41,7 @@
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun.js": "^3.7.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -45,8 +49,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^6.0.2",
+    "react-router": "^5.3.1",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "stripe": "^8.186.0",
